--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,11 +4,23 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+
+env:
+  GO_VERSION: '1.16'
+  GOLANGCI_VERSION: 'v1.31'
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
-  build:
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: ${{ env.GOLANGCI_VERSION }}
+
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -16,10 +28,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.16
+        go-version: ${{ env.GO_VERSION }}
 
     - name: Test
       run: make test
-
-    - name: Upload coverage to Codecov
-      run: bash <(curl -s https://codecov.io/bash)
