--- a/helm/charts/daemonjob-operator/templates/rbac/auth_proxy_role_binding.yaml
+++ b/helm/charts/daemonjob-operator/templates/rbac/auth_proxy_role_binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: proxy-rolebinding
+  name: {{ include "daemonjob-operator.name" . }}-proxy-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: proxy-role
+  name: {{ include "daemonjob-operator.name" . }}-proxy-role
 subjects:
 - kind: ServiceAccount
-  name: controller-manager
-  namespace: system
+  name: {{ include "daemonjob-operator.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
