--- a/helm/charts/daemonjob-operator/templates/rbac/leader_election_role.yaml
+++ b/helm/charts/daemonjob-operator/templates/rbac/leader_election_role.yaml
@@ -2,7 +2,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: leader-election-role
+  name: {{ include "daemonjob-operator.name" . }}-leader-election-role
+  namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups:
   - ""
