--- a/helm/charts/daemonjob-operator/templates/rbac/metrics-reader-cluster-role.yaml
+++ b/helm/charts/daemonjob-operator/templates/rbac/metrics-reader-cluster-role.yaml
@@ -1,9 +1,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: metrics-reader
+  name: {{ include "daemonjob-operator.name" . }}-metrics-reader
 rules:
 - nonResourceURLs:
-  - "/metrics"
+  - /metrics
   verbs:
   - get
