--- a/helm/charts/daemonjob-operator/templates/rbac/service_account.yaml
+++ b/helm/charts/daemonjob-operator/templates/rbac/service_account.yaml
@@ -1,5 +1,7 @@
+{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: controller-manager
-  namespace: system
+  name: {{ include "daemonjob-operator.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
+{{- end -}}
