--- a/helm/charts/daemonjob-operator/Chart.yaml
+++ b/helm/charts/daemonjob-operator/Chart.yaml
@@ -5,7 +5,7 @@ type: application
 version: 0.1.0
 appVersion: 0.1.0
 maintainers:
-  - name: Mohamed Chiheb Ben jemaa
+  - name: mcbenjemaa
     email: mc.benjemaa@gmil.com
 sources:
 - https://github.com/mcbenjemaa/daemonjob-operator
